[package]
name = "twenty"
version = "0.2.1"
authors = ["rv <hey@rohith.net>"]
license = "MIT"
description = "20-20-20 rule enforcer for compositors implementing ext-session-lock."
homepage = "https://github.com/waycrate/twenty"
repository = "https://github.com/waycrate/twenty"
keywords = ["wayland", "wlroots"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2024"

[dependencies]
iced = { version = "0.12.1", features = ["tokio"] }
iced_sessionlock = "0.2.5"
tokio = { version = "1.38.0", features = ["sync"] }
notify-rust = "4"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
duration-str = { version = "0.21.0", features = ["time", "serde"] }
daemonize = "0.5.0"
